@@ -52,6 +52,8 @@ Release 0.9.9
 - allow to create beans via settings using set::[setting]
 - fix static page editor; b:#2934676
 - make static page editor work with the new editor code
+- add ZMEditorSelectFormWidget
+- settings: add support for ZMEditorSelectFormWidget
 
 Release 0.9.8
 - add Savant3 and experimental views (not used yet)
